update app server upgrade docs